# aligned-layer

./: .gitignore  .gitmodules  Makefile  README.md  aligned.json  docker-compose.yaml  go.mod  go.sum  network_params.yaml  retry.go
alerts/: .env.devnet  .env.example  balance_alerts.sh  sender_with_alert.sh  slack.sh
batcher/: Cargo.toml
batcher/aligned-task-sender/: Cargo.toml  README.md
batcher/aligned-task-sender/src/: commands.rs  structs.rs
batcher/aligned-task-sender/wallets/: devnet  devnet-backup
claim_contracts/: Makefile  README.md  deployClaim.sh  foundry.toml  remappings.txt
config-files/: config-aggregator-docker.yaml  config-aggregator-ethereum-package.yaml  config-aggregator-test.yaml  config-aggregator.yaml  config-batcher-docker.yaml  config-batcher-ethereum-package.yaml  config-batcher.yaml  config-docker.yaml  config-operator-1-ethereum-package.yaml  config-operator-docker.yaml  config-operator-holesky.yaml  config-operator-mainnet.yaml  config-operator-test.yaml  config.yaml  operator_metadata.json
core/: connection.go  connection_test.go  retry.go  retry_test.go
docker/: aligned_base.Dockerfile  batcher.Dockerfile  eigenlayer-cli.Dockerfile  foundry.Dockerfile  operator.Dockerfile
docs/: SUMMARY.md  multisig.md
explorer/: .env.dev  .env.example  .gitignore  Makefile  README.md  db_stats.md  mix.exs  start.sh
metrics/: metrics.go
prometheus/: prometheus.yaml
scripts/: fund_operator_devnet.sh  install_node_exporter.sh  operator_full_registration.sh  rich-wallets-anvil.csv
telemetry_api/: .gitignore  README.md  mix.exs
(+398 files in other folders)
