
[package]
name = "task-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = [
    "io-std",
    "time",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "process",
    "fs",
] }
tokio-tungstenite = { version = "0.24.0", features = [
    "rustls-tls-webpki-roots",
    "native-tls",
] }
url = "2.5.0"
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.4", features = ["derive"] }
ethers = { version = "2.0", features = ["ws", "rustls", "eip712"] }
aligned-sdk = { path = "../aligned-sdk" }
rpassword = "7.3.1"
sha3 = { version = "0.10.8" }
